# ostris_nodes_comfyui

./: .gitignore  Ostris_Nodes.py  README.md  __init__.py  info.py  node_list.json  pyproject.toml  requirements.txt
nodes/: base_node.py  batch_image_loader.py  general.py  image.py  llm.py
settings/: config.py
utils/: paths.py  storage.py
workflow_examples/: caption_upsampling.json  prompt_upsampling.json
